Rework into Tetra

--- a/style/helpers.scss
+++ b/style/helpers.scss
@@ -53,7 +53,7 @@
 
 // Keyframe animations
 @mixin keyframes($animation-name) {
-  @-webkit-keyframes $animation-name {
+  @-webkit-keyframes #{$animation-name} {
     @content;
   }
   @-moz-keyframes $animation-name {
