--- a/style/main.css
+++ b/style/main.css
@@ -2,10 +2,13 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #222;
   color: #FFF;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
+
+html {
+  background: linear-gradient(#322949, #402A54);
+  height: 100%; }
 
 body {
   margin: 80px 0; }
@@ -401,11 +404,11 @@ hr {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
   .tile.tile-color-1 .tile-inner {
-    background: #247BA0; }
+    background: #47DFFF; }
   .tile.tile-color-2 .tile-inner {
-    background: #70C1B3; }
+    background: #FF3535; }
   .tile.tile-color-3 .tile-inner {
-    background: #FF1654; }
+    background: #FFCB00; }
   .tile.tile-color-4 .tile-inner {
     background: #ED6A5A; }
   .tile.tile-color-5 .tile-inner {
@@ -569,7 +572,8 @@ hr {
   line-height: 42px;
   margin-bottom: 0; }
 
-.restart-button {
+.restart-button,
+.back-button {
   display: inline-block;
   background: black;
   border-radius: 3px;
@@ -579,8 +583,13 @@ hr {
   height: 40px;
   line-height: 42px;
   display: block;
-  text-align: center;
+  text-align: center; }
+
+.restart-button {
   float: right; }
+
+.back-button {
+  float: left; }
 
 .game-explanation {
   margin-top: 50px; }
