--- a/style/main.scss
+++ b/style/main.scss
@@ -25,10 +25,15 @@ html, body {
   margin: 0;
   padding: 0;
 
-  background: #222;
+  // background: #222;
   color: $text-color;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
+}
+
+html{
+  background: linear-gradient(#322949, #402A54);
+  height: 100%;
 }
 
 body {
@@ -407,17 +412,17 @@ hr {
   
   &.tile-color-1 .tile-inner{
     // background: #28FC42;
-    background: #247BA0;
+    background: #47DFFF;
   }
   
   &.tile-color-2 .tile-inner{
     // background: #E5C51E;
-    background: #70C1B3;
+    background: #FF3535;
   }
   
   &.tile-color-3 .tile-inner{
     // background: #4500FF;
-    background: #FF1654;
+    background: #FFCB00;
   }
   
   &.tile-color-4 .tile-inner{
@@ -528,11 +533,19 @@ hr {
   margin-bottom: 0;
 }
 
-.restart-button {
+.restart-button,
+.back-button {
   @include button;
   display: block;
   text-align: center;
+}
+
+.restart-button {
   float: right;
+}
+
+.back-button {
+  float: left;
 }
 
 .game-explanation {
